# softcvi_validation

./: .gitignore  README.md  pyproject.toml  softcvi_env.yml  softcvi_validation_env.yml  vae.ipynb
cnpe_validation/: __init__.py  constraints.py  distributions.py  metrics.py  plot_utils.py  utils.py
cnpe_validation/tasks/: available_tasks.py  eight_schools.py  eight_schools_non_centered.py  multimodal_gaussian.py  normal_mixture.py  sirsde.py  slcp.py  tasks.py  two_moons.py
cnpe_validation/tasks/sirsde_surrogate/: losses.npz  processor.eqx  surrogate.eqx
cpe_validation/: __init__.py  metrics.py
cpe_validation/tasks/: available_tasks.py  eight_schools.py  linear_regression.py  multimodal_gaussian.py  slcp.py  tasks.py
examples/: eight_schools.ipynb  mass_covering_example.ipynb  minimal.ipynb  npe.ipynb  plot_individual_runs.ipynb  plot_results.ipynb
gnpe_experiments/: __init__.py  metrics.py  plot_utils.py  utils.py
gnpe_experiments/models/: eight_schools_non_centered.py
gnpe_experiments/tasks/sirsde/: sirsde.py
gnpe_experiments/tasks/sirsde/surrogate/: losses.npz  processor.eqx  surrogate.eqx
jobs/: bnn_job.sh  bnn_submitter.sh  job.sh  run_eight_schools.sh  run_sirsde.sh  run_task.sh  run_tasks_with_reference.sh  run_tasks_without_reference.sh  run_two_moons.sh  submitter.sh
plots/: plot_bnn_results.ipynb  plot_gradient_analysis.ipynb  plot_individual_runs.ipynb  plot_results.ipynb  style.mplstyle  vae.ipynb
plots/plots/: .gitignore
reference_posteriors/eight_schools/: latents.npz  observations.npy  observations.npz
reference_posteriors/garch/: latents.npz  observations.npy  observations.npz
reference_posteriors/slcp/: latents.npz  observations.npy  observations.npz
results/samples/: eight_schools.npz  linear_regression.npz  slcp.npz
scripts/: get_reference_posteriors.py  run_bnn.py  run_samples_only.py  run_task.py  train_sirsde_surrogate.py
softce_validation/: __init__.py  distributions.py  metrics.py  utils.py
softce_validation/tasks/: available_tasks.py  eight_schools.py  garch.py  linear_regression.py  multimodal_gaussian.py  slcp.py  tasks.py
softcvi_validation/: __init__.py  distributions.py  metrics.py  utils.py
softcvi_validation/bnn/: __init__.py  bnn.py  bnn_losses.py  bnn_metrics.py  bnn_tasks.py  train_bnn.py
softcvi_validation/tasks/: available_tasks.py  eight_schools.py  garch.py  linear_regression.py  multimodal_gaussian.py  slcp.py  tasks.py
tests/: test_constraints.py  test_distributions.py  test_normalization_gradient.py  test_tasks.py  test_utils.py
