[project]
authors = [{ name = "Daniel Ward", email = "danielward27@outlook.com" }]
dependencies = ["flowjax", "equinox", "tqdm", "optax", "matplotlib", "diffrax"]
description = "Experiments for cnpe package."
name = "cnpe_validation"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.0"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--jaxtyping-packages=cnpe,cnpe_validation,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"


[tool.ruff]
select = ["E", "F", "B", "D", "COM", "I", "UP", "TRY004", "RET", "PT", "FBT"]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
ignore = ["D102", "D105", "D107", "F722"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
"*.ipynb" = ["D"]
"__init__.py" = ["D"]

[tool.setuptools]
packages = ["cnpe_validation"]
